--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,9 @@
   outline: none !important;
 }
 .container {
-  max-width: 600px;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
 }
 .btn {
   background: #db6ddb;
