--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
-.container {
-  max-width: 600px;
-  text-align: center;
+#radio {
+  border: 0px;
+  width: 40px;
+  height: 25px;
+}
+
+.question-window {
+  max-width: 100%;
+}
+
+#submit-ans {
+  margin-top: 10px;
+  border-radius: .25rem;
 }
 
 .btn {
@@ -13,9 +23,11 @@
   outline: none !important;
 }
 .container {
-  max-width: 800px;
+  margin-top: 5%;
+  max-width: 65%;
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 .btn {
   background: #db6ddb;
@@ -47,4 +59,24 @@ p {
 
 .radio:focus {
   box-shadow: none;
+}
+
+.choice {
+  margin: 10px auto;
+  display: flex;
+  flex-direction: row;
+  align-content: flex-end;
+  align-items: center;
+  justify-content: flex-start;
+}
+.choices {
+  flex-direction: column-reverse;
+  align-content: center;
+  align-items: center;
+}
+
+
+.score {
+  margin: 30px auto;
+  opacity: .8;
 }
