--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
 }
 .btn {
   background: #db6ddb;
@@ -62,21 +63,30 @@ p {
 }
 
 .choice {
-  margin: 10px auto;
+  margin: 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column-reverse;
   align-content: flex-end;
   align-items: center;
   justify-content: flex-start;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 .choices {
+  display: flex;
   flex-direction: column-reverse;
-  align-content: center;
   align-items: center;
+  align-content: center;
 }
 
 .corr-ans {
   margin: 30px auto;
   opacity: 0.7;
   color: #43d9be;
+}
+
+.new-question {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
